[project]
name = "rileychase-net"
version = "1.0.0"
description = "Simple static site generator and content that powers rileychase.net"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "aiofile>=3.9.0",
    "aiohttp-devtools>=1.1.2",
    "aiohttp[speedups]>=3.11.18",
    "aiostream>=0.6.4",
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.3",
    "pyyaml>=6.0.2",
    "watchfiles>=1.0.5",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.34.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "rope>=1.13.0",
    "ruff>=0.11.6",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-markdown>=3.8.0.20250415",
    "types-pyyaml>=6.0.12.20250402",
]


[tool.ruff]
exclude = []
lint.select = ["ALL"]
lint.ignore = [
    # Docstrings
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D200", # fits-on-one-line
    "D205", # blank-line-after-summary
    "D212", # multi-line-summary-first-line

    # Type annotations
    "ANN401", # any-type

    # Code design
    "A001",   # builtin-variable-shadowing
    "A002",   # builtin-argument-shadowing
    "A003",   # builtin-attribute-shadowing
    "BLE001", # blind-except
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    # "ERA001",  # commented-out-code
    "G004",    # logging-f-string
    "PLR0913", # too-many-arguments
    "TRY003",  # raise-vanilla-args

    # Meta
    "FIX002", # line-contains-todo
    "TD003",  # missing-todo-link
    "E741",   # ambiguous-variable-name

    # Formatter conflicts
    "ISC001", # single-line-implicit-string-concatenation
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
    "S101",   # assert
    "D103",   # undocumented-public-function
    "ANN003", # missing-type-kwargs
]
"weaving/emoji/_generate*.py" = [
    "T201",    # print
    "PLR2004", # magic-value-comparison
    "ERA001",  # commented-out-code
]
"weaving/emoji/db.py" = [
    "RUF001", # ambiguous-unicode-character-string
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
show_error_codes = true
pretty = true
